<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/geography_nav"
            android:icon="@drawable/baseline_vpn_lock_24"
            android:title="@string/quizz_1_geography" />
        <item
            android:id="@+id/sciene_nav"
            android:icon="@drawable/baseline_science_24"
            android:title="@string/quizz_2_science" />
        <item
            android:id="@+id/art_nav"
            android:icon="@drawable/baseline_color_lens_24"
            android:title="@string/quizz_3_art"
            android:background="@drawable/custom_button"
            />

    </group>
</menu>